# starts-bevy-engine

./: Cargo.toml
assets/shaders/: custom_shader.wgsl
src/: main.rs  plugins.rs
src/plugins/: a3d_scene.rs  basic_ecs.rs  environment.rs  hello.rs  sky.rs  some_3d.rs  test_3d.rs  window_test.rs
